# futurisys-ml-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-hf.yml
app/: main.py
app/api/: routes.py
app/core/: security.py
app/db/: database.py  models.py  repository.py
app/schemas/: prediction.py
app/services/: model_service.py
docs/: database_schema.md  model_documentation.md
model/: final_model.joblib
scripts/: create_db.py  load_dataset.py
sql/: schema.sql
tests/: conftest.py  test_api.py  test_database.py  test_model_service.py  test_repository.py
tests/data/: sample_functional_cases.json  sample_invalid_payloads.json  sample_valid_payloads.json
